# hp-spgg-multiprovider-project

./: .gitignore  CLOUDGPT_USAGE.md  HP-SPGG_Multi_Provider_Research_Plan.md  PACT_Paper_Finalization_TODO.md  README.md  audit_personas.py  build_trap_calibration.py  calibration.py  calibration_anthropic.npy  calibration_anthropic_trap.npy  calibration_cloudgpt.npy  calibration_cloudgpt_live.npy  calibration_cloudgpt_live_continued.npy  calibration_cloudgpt_live_overnight_b1.npy  calibration_cloudgpt_live_overnight_b2.npy  calibration_cloudgpt_live_overnight_b3.npy  calibration_cloudgpt_live_overnight_b4.npy  calibration_cloudgpt_live_overnight_b5.npy  calibration_cloudgpt_live_overnight_b6.npy  calibration_cloudgpt_multi_model_DeepSeek_V3_2_c1.npy  calibration_cloudgpt_multi_model_DeepSeek_V3_2_c2.npy  calibration_cloudgpt_multi_model_Kimi_K2_6_c1.npy  calibration_cloudgpt_multi_model_Llama_4_Maverick_17B_128E_Instruct_FP8_c1.npy  calibration_cloudgpt_multi_model_fast4_8algos_DeepSeek_V3_2_c1.npy  calibration_cloudgpt_multi_model_fast4_8algos_DeepSeek_V3_2_c10.npy  calibration_cloudgpt_multi_model_fast4_8algos_DeepSeek_V3_2_c11.npy  calibration_cloudgpt_multi_model_fast4_8algos_DeepSeek_V3_2_c12.npy  calibration_cloudgpt_multi_model_fast4_8algos_DeepSeek_V3_2_c13.npy  calibration_cloudgpt_multi_model_fast4_8algos_DeepSeek_V3_2_c14.npy  calibration_cloudgpt_multi_model_fast4_8algos_DeepSeek_V3_2_c15.npy  calibration_cloudgpt_multi_model_fast4_8algos_DeepSeek_V3_2_c16.npy  calibration_cloudgpt_multi_model_fast4_8algos_DeepSeek_V3_2_c17.npy  (+155 more)
analysis/: E2_summary.json  (+443 more)
(+1623 files in other folders)
