[project]
name = "hp-spgg-multiprovider"
version = "0.1.0"
description = "Multi-provider HP-SPGG benchmark runner for HT-MG-BC experiments"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "openai>=1.0",
    "anthropic>=0.39",
    "google-genai>=0.3",
    "azure-identity>=1.17",
    "azure-identity-broker>=1.1; sys_platform == 'win32'",
    "msal>=1.28",
]

[tool.uv]
package = false
